htdocs/t/gifts.css
/* gifts-page */

#gifts-page .b-title { height:26px; padding-bottom:10px; margin-bottom: 20px; }
#gifts-page .b-title a { text-decoration:none; } 
#gifts-page .b-content {}
#gifts-page #top{}
#gifts-page #main-wrapper {z-index: 1; position:relative;}

#gifts-page .b-title h1,
#gifts-page .b-title h2{font-size:20px;margin-left:-1px;}
#gifts-page .b-title h2 a {cursor:default}

#gifts-page .previews.column { margin-bottom: 32px; } 
#gifts-page .previews.column .body-wrapper { overflow:visible; height: 200px; padding-bottom:0}
#gifts-page .previews.column .gradient {height:32px; width: 958px; position:absolute; top:182px; left:2px; margin:0; border:none; background:url(/t/bg/body/body-bottom.png); }

#gifts-page .promos.column {}
#gifts-page .promos.column .body-wrapper {overflow:hidden; padding:14px 18px 26px}

#gifts-page .gifts-previews .gift { width: 213px; text-align: center; cursor:pointer; vertical-align:top; display:inline-block; position:relative;}
#gifts-page .gifts-previews .gift img { display: block; margin: 0 auto -3px; }
#gifts-page .gifts-previews .name { text-decoration:none; font-family: Arial, sans-serif; font-size: 13px; color: #0392f1; }
#gifts-page .gifts-previews .gift.selected .name { color: #e2138a; font-weight:bold; border-bottom: none; font-style: italic; cursor: default; }
#gifts-page .gifts-previews .gift .mark {z-index:1; background:url(/t/event/mark.png); width: 25px; height:14px; position:absolute; top:144px; left:93px;}

#gifts-page .gifts-previews .viewport,
#gifts-page .gifts-previews { position: relative; width: 920px; height: 159px; }
#gifts-page .gifts-previews .viewport {width: 855px; margin-left: 42px;}
#gifts-page .gifts-previews .viewport .point { float: left; width: 855px; height: 100%; }
#gifts-page .gifts-previews .viewport .surface { width: 4000px; padding: 0;}
#gifts-page .gifts-previews .prev,
#gifts-page .gifts-previews .next {
display:block; z-index:3; width:20px; height:20px; position:absolute; left:auto; top:41px; right:19px;
background: url(icon/strs-green.png);
}
#gifts-page .gifts-previews .prev { left: 0; background-position: 0 -72px; }
#gifts-page .gifts-previews .next { right: 0; background-position: -20px -72px; }
#gifts-page .gifts-previews .prev.disabled { background-position: 0 -92px; cursor: default; }
#gifts-page .gifts-previews .next.disabled { background-position: -20px -92px; cursor: default; }

#gifts-page .gift-promos { margin: 5px 0 0 1px } 
#gifts-page .gift-promos .viewport,
#gifts-page .gift-promos { overflow: hidden; position: relative; width: 920px; height: 356px; clear:both;}
#gifts-page .gift-promos .viewport .point { float: left; width: 960px; height: 100%; }
#gifts-page .gift-promos .viewport .surface { width: 10000px; height:100%;}
#gifts-page .gift-promos .prev,
#gifts-page .gift-promos .next { position: absolute; top: 150px; z-index: 10; width: 60px; height: 60px; background: url(bar/photos-buttons.png); }
#gifts-page .gift-promos:hover .prev,
#gifts-page .gift-promos:hover .next {display:block;}
#gifts-page .gift-promos:hover .hidden {display:none;}
#gifts-page .gift-promos .prev { left: 0; background-position: -60px 0; display:none;}
#gifts-page .gift-promos .next { right: 0; background-position: 0 0; display:none;}
#gifts-page .gift-promos .prev.disabled { background-position: -60px -60px; cursor: default; }
#gifts-page .gift-promos .next.disabled { background-position: 0 -60px; cursor: default; }

#gifts-page #full-name {font-size:21px; margin: 18px 0 10px 0}
#gifts-page #desc {font-size:14px; width: 600px;}
#gifts-page #desc p {margin-bottom:10px}
#gifts-page #desc a {text-decoration:none}
#gifts-page #desc a:hover {text-decoration:underline}
#gifts-page #price {float:right; margin-top:55px}
#gifts-page #where-to-buy {margin-bottom: 22px; color: #E2138A; margin-top: 31px; font-size:21px}
#gifts-page #corporate {display:none; text-decoration:none; color: #41474c; border-bottom:1px #41474c dashed; margin-left:20px}
#gifts-page #places {width:600px}
#gifts-page #places .place {font-size: 12px; width:300px; float:left; margin-bottom:28px; }
#gifts-page #places .title {font-size:19px; }
#gifts-page .ast {font-size:14px; position:relative; top:-4px;}
#gifts-page #places .address {display:block; }
#gifts-page #places .time {display:block; font-weight: bold;}
#gifts-page #places .tel {display:block; }
#gifts-page #ask-barmen {margin-top:135px; width:600px; font-size:19px }

<!--# if expr="$HTTP_USER_AGENT = /MSIE/" -->
#gifts-page .promos.column .body-wrapper {overflow:visible;}
#gifts-page .gifts-previews .gift .mark { top:145px;} 
<!--# endif -->

<!--# if expr="$HTTP_USER_AGENT = /MSIE (6|7)/" -->
#gifts-page .gifts-previews .name {zoom:1; } 
#gifts-page .gifts-previews .gift { display:inline; position:relative;}
#gifts-page #ask-barmen {margin-top:36px;}
<!--# endif -->


<!--# if expr="$HTTP_USER_AGENT = /MSIE 6/" -->
#gifts-page .previews .body-wrapper { padding-bottom:0 } 
#gifts-page .previews .b-content {height: 144px} 
#gifts-page .gift-promos .disabled { background-position-y: -60px; }
#gifts-page .gift-promos .prev { background-position-x: -60px; }
#gifts-page .gift-promos .prev,
#gifts-page .gift-promos .next { display: block; }
#gifts-page .gift-promos .hidden {display:none;}

#gifts-page .gifts-previews .prev { background-position-x: -52px; }
<!--# endif -->

<!--# include file="/t/theme.css" -->

